--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div id="sketch3" style="cursor: move;">
     <iframe src="https://lilykdonaldson.github.io/sketchOne121/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
     </div>
+    <div id="biocss">
+      <iframe src="https://lilykdonaldson.github.io/p5-bio-horizontal/" width="700" height="400" scrolling="no" frameborder="0"></iframe>
+    <h2 id="bio-name">Your Name</h2>
+    <p id="bio-text">Lorem ipsum dolor sit amet, consect etur adipis cing elit. Fusce enim ex,</br> egestas ac sapien a, consectetur scelerisque erat. Cras maximus massa nec</br> magna portt itor ornare. Suspen disse lacinia erat nisi, vitae convallis est</br> pulv inar quis. Praesent ultrices, lectus eget ullam corper lacinia, arcu </br>ex porta leo, et porttitor turpis nisl ac mi. Maecenas iaculis placerat felis, </br>nec sa.Suspen disse lacinia erat nisi, vitae convallis est pulv inar quis. Prae </br>egestas ac sapien a, consectetur scelerisque erat. Cras maximus massa nec</br> magna portt itor ornare. Suspen disse lacinia erat nisi, vitae convallis est</br> pulv inar quis. Praesent ultrices, lectus eget ullam corper lacinia, arcu </br>egestas ac sapien a, consectetur scelerisque erat. Cras maximus massa nec</br> magna portt itor ornare. Suspen disse lacinia erat nisi, vitae convallis est</br> pulv inar quis. Praesent ultrices, lectus eget ullam corper lacinia, arcu.  </p>
   </div>
   </body>
 </html>
