--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </style>
   </head>
   <body oncontextmenu="return false;" style="background-color:#fcfaf4;">
-    <h1 id="nametext">YOUR NAME</h1>
+    <h1 id="nametext">Sultan Almojel</h1>
     <p id="csc">CSC 121 - Creative Coding - Fall 2018</p>
     <div id="sketch1" style="cursor: move;">
     <iframe src="https://sa2844a.github.io/cool-sliderz/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
@@ -20,7 +20,7 @@
     </div>
     <div id="biocss">
       <iframe src="https://lilykdonaldson.github.io/p5-bio-horizontal/" width="700" height="400" scrolling="no" frameborder="0"></iframe>
-    <h2 id="bio-name">Your Name</h2>
+    <h2 id="bio-name">Sultan Almojel</h2>
     <p id="bio-text">Lorem ipsum dolor sit amet, consect etur adipis cing elit. Fusce enim ex,</br> egestas ac sapien a, consectetur scelerisque erat. Cras maximus massa nec</br> magna portt itor ornare. Suspen disse lacinia erat nisi, vitae convallis est</br> pulv inar quis. Praesent ultrices, lectus eget ullam corper lacinia, arcu </br>ex porta leo, et porttitor turpis nisl ac mi. Maecenas iaculis placerat felis, </br>nec sa.Suspen disse lacinia erat nisi, vitae convallis est pulv inar quis. Prae </br>egestas ac sapien a, consectetur scelerisque erat. Cras maximus massa nec</br> magna portt itor ornare. Suspen disse lacinia erat nisi, vitae convallis est</br> pulv inar quis. Praesent ultrices, lectus eget ullam corper lacinia, arcu </br>egestas ac sapien a, consectetur scelerisque erat. Cras maximus massa nec</br> magna portt itor ornare. Suspen disse lacinia erat nisi, vitae convallis est</br> pulv inar quis. Praesent ultrices, lectus eget ullam corper lacinia, arcu.  </p>
   </div>
   </body>
