--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body oncontextmenu="return false;" style="background-color:#fcfaf4;">
     <h1 id="nametext">Sultan Almojel</h1>
     <p id="csc">CSC 121 - Creative Coding - Fall 2018</p>
+   <div id="Final" style="cursor: move;">
+    <iframe src="https://sa2844a.github.io/cool-sliderz/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
+    </div>
     <div id="sketch1" style="cursor: move;">
     <iframe src="https://sa2844a.github.io/cool-sliderz/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
     </div>
@@ -16,9 +19,6 @@
     <iframe src="https://lilykdonaldson.github.io/sketchOne121/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
     </div>
         <div id="sketch3" style="cursor: move;">
-    <iframe src="https://lilykdonaldson.github.io/sketchOne121/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
-    </div>
-            <div id="sketch4" style="cursor: move;">
     <iframe src="https://lilykdonaldson.github.io/sketchOne121/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
     </div>
     <div id="biocss">
