--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <div id="biocss">
       <iframe src="https://lilykdonaldson.github.io/p5-bio-horizontal/" width="700" height="400" scrolling="no" frameborder="0"></iframe>
     <h2 id="bio-name">Sultan Almojel</h2>
-    <p id="bio-text"> Hey! My name is Sultan Almojel, I am from Saudi Arabia and am a finance major. This is my first semester ever coding anything. I’ve been enjoying coding and just had fun learning all the new ways to make cool things. This is my last year at American University, I had a great college experience, mainly because I joined the Ultimate Frisbee team which just made my life at college amazing after becoming friends with amazing people.    </p>
+    <p id="bio-text"> Hey! My name is Sultan Almojel, I am from Saudi Arabia and am a finance major. 
+      This is my first semester ever coding anything. I’ve been enjoying coding and just had fun 
+      learning all the new ways to make cool things. This is my last year at American University, 
+      I had a great college experience, mainly because I joined the Ultimate Frisbee team which 
+      just made my life at college amazing after becoming friends with amazing people.    </p>
   </div>
   </body>
 </html>
