--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="nametext">Sultan Almojel</h1>
     <p id="csc">CSC 121 - Creative Coding - Fall 2018</p>
    <div id="Final" style="cursor: move;">
-    <iframe src="https://sa2844a.github.io/finding-random-eps/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
+    <iframe src="https://sa2844a.github.io/final/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
     </div>
     <div id="sketch1" style="cursor: move;">
     <iframe src="https://sa2844a.github.io/cool-sliderz/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
