--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <iframe src="https://sa2844a.github.io/button/" width="800" height="700" scrolling="no" frameborder="0"></iframe>
     </div>
     <div id="biocss">
-      <iframe src="https://lilykdonaldson.github.io/p5-bio-horizontal/" width="700" height="400" scrolling="no" frameborder="0"></iframe>
+      <iframe src="https://sa2844a.github.io/p5-bio-horizontal/" width="700" height="400" scrolling="no" frameborder="0"></iframe>
     <h2 id="bio-name">Sultan Almojel</h2>
     <p id="bio-text"> Hey! My name is Sultan Almojel, I am from Saudi Arabia and am a finance major. 
       This is my first semester ever coding anything. I’ve been enjoying coding and just had fun 
